--- a/index.css
+++ b/index.css
@@ -1,3 +1,39 @@
-#heading{
-  color: blue;
+.logo{
+  width:100px;
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+
+.nav-items>ul{
+  display: flex;
+  list-style-type: none;
+  font-size: 20px;
+  
+}
+.nav-items>ul>li{
+  padding: 10px;
+  margin: 10px;
+}
+.res-card{
+  padding: 4px;
+  margin: 10px;
+  width: 200px;
+  background-color: #f0f0f0;
+}
+
+.res-logo{
+  width: 190px;
+  padding:5px;
+}
+
+.res-card:hover{
+  border: 1px solid black;
+}
+
+.res-container{
+  display: flex;
+  flex-wrap: wrap;
 }
