--- a/index.css
+++ b/index.css
@@ -43,5 +43,24 @@
 }
 
 .filter-btn{
+  margin:10px;
+  cursor: pointer;
+}
+
+.shimmer-container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card{
+  background-color: #f0f0f0;
+  padding: 10px;
+  margin: 10px;
+  width: 200px;
+  height: 300px;
+}
+.login-btn{
+  padding: 10px;
+  margin: 10px;
   cursor: pointer;
 }
